--- a/errCorrect/start.html
+++ b/errCorrect/start.html
@@ -8,7 +8,7 @@
     <!-- JS-Cookies -->
     <script type="module" src="./js/js.cookie.mjs"></script>
     <script src="./js/js.cookie.js"></script>
-    
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -29,8 +29,6 @@
       }
       .board{
         margin-top: 20vh;
-        width: 65%;
-        height: 60%;
       }
 
       .sub-board{
@@ -40,6 +38,7 @@
       .title-board{
         /*min-width: 200px;*/
         max-width: 250px;
+        height: 177px;
         background-color: rgba(240, 220, 183, 0.9);
         color: rgba(86, 75, 68, 1);
         border-top-left-radius: .7rem!important;
@@ -48,8 +47,6 @@
         text-align: center;
         display: inline-block;
         vertical-align:middle;
-
-        /*max-width: 10vw;*/
       }
 
       .title-text{
@@ -63,8 +60,8 @@
         top:12%;
       }
       .sub-title-board{
-        min-width: 190px;
         max-width: 250px;
+        min-width: 250px;
         background-color: rgba(111, 104, 109, 0.9);
 
         border-bottom:10px solid rgba(111, 104, 109, 0);
@@ -128,7 +125,7 @@
         font-size: 1.5em;
       }
       .sub-title-task{
-        font-size: 50%;
+        font-size: 1em;
         padding: 2px;
         color: rgba(74, 54, 44, 1);
       }
@@ -162,7 +159,7 @@
     var boardDiv = $('.board');
     for(let typeid in data){
         console.log(typeid);
-      var rowDiv = $('<div class="row sub-board" id="'+typeid+'">');
+      var rowDiv = $('<div class="row sub-board justify-content-center" id="'+typeid+'">');
       boardDiv.append(rowDiv);
 
       var typeDiv = $('<div class="col-lg-2 title-board">');
@@ -196,14 +193,14 @@
         for(let m in data[typeid]["subTypes"][st]["mission"]){
             let btnDiv = $('<div class="button1 rounded-circle"><span>'+m+'</span></div>');
 
-            /* read Cookies */
+            // Read Cookies
             var mission = typeid + st + m;
             // console.log("mission", typeid, st, m);
             if (Cookies.get(mission) != null) {
               data[typeid]["subTypes"][st]["mission"][m]["finished"] = Cookies.get(mission);
               // console.log("start test", Cookies.get(mission));
             }
-
+            
             if (data[typeid]["subTypes"][st]["mission"][m]["finished"] == 1){
                 btnDiv = $('<div class="button1 rounded-circle missionDone"><span>'+m+'</span></div>');
             }
