--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -28,24 +28,29 @@
       -moz-background-size: cover;
       -ms-background-size: cover;
 
-
     }
     .board{
       margin-top: 25vh;
-      width: 75vw;
-      height: 60%;
+      max-width: 960px
+      /*width: 75vw;*/
+      /*height: 60%;*/
     }
 
     .sub-board{
       margin-top: 15px;
+
     }
 
     .question-bg{
+      position: relative;
       padding: 10px;
+      width: 180px;
+
       border-radius: .7rem!important;
       background-color:rgba(138, 146, 160, 0.6);
       height: 200px;
-      margin: 10px;
+      /*margin-left: 10px;*/
+      margin-bottom: 30px;
 
       /*width: 19%;*/
       /*max-width: 300px;*/
@@ -74,7 +79,7 @@
       height:120px;
       background-color:rgba(255,255,255,1);
       border-radius: 0 0 15px 15px;
-      padding: 20px;
+      padding: 10px;
       font-size: 0.6em;
     }
 
@@ -140,8 +145,8 @@
       position: fixed;
       top:5vh;
       left: 2vw;
-      width: 100px;
-      height: 50px;
+      width: 80px;
+      height: 40px;
 
       text-align: center;
 
@@ -150,7 +155,7 @@
 
       border:2px solid rgba(39, 166, 137, 0.9);
 
-      font-size: 25px;
+      font-size: 20px;
       box-shadow: 0 0 3px rgba(39, 166, 137, 0.6);
 
       transition: all 0.6s;
@@ -171,15 +176,19 @@
     /*}*/
 
     #exampleModal{
-      overflow: hidden;
+      /*overflow: hidden;*/
+
+    }
+
+    .modal-dialog-centered{
+      max-width: 800px;
+      min-width: 300px;
     }
 
     .modal-bg{
       padding: 20px;
       border-radius: .7rem!important;
       background-color:rgba(138, 146, 160, 0.6);
-      width: 60vw;
-      min-width: 300px;
     }
 
     .modal-header-bg{
@@ -191,16 +200,16 @@
       color: rgba(253, 238, 211, 1);
     }
 
-    .modal-header-bg #question-title{
-      /*color: rgba(253, 238, 211, 1);*/
-      display: inline-block;
+    #question-title{
+      width: 100px;
       text-align: center;
 
-      font-size: 1.8em;
+      font-size: 30px;
 
       position:absolute;
       left: 50%;
       transform: translate(-50%,0);
+
     }
 
     .question-body{
@@ -211,13 +220,15 @@
     }
 
     #question-content{
-      height: 30vh;
+      height: auto;
+      min-height: 200px;
+      padding-bottom: 50px;
       color: #000000;
       cursor:pointer;
     }
 
     .question-word{
-        font-size: 1.8em;
+        font-size: 25px;
       }
 
 
@@ -232,25 +243,29 @@
     }
     .answer-board{
       position:absolute;
-      left: 50%;
+      left: 30%;
       transform: translate(-50%,0);
 
       display: inline-block;
       vertical-align:middle;
 
-      font-size: 35px;
+      font-size: 25px;
 
     }
     #user-answer{
       width: 60px;
-      height: 60px;
-      font-size: 35px;
+      /*height: 60px;*/
+      /*font-size: 30px;*/
+      border-bottom: 2px solid #151515;
 
     }
 
     input {
-      outline: none;
+      /*outline: none;*/
       text-align: center;
+       border:none;
+      outline:medium;
+
     }
 
     .btn-submit{
@@ -259,12 +274,12 @@
       background-color: rgba(174, 48, 53, 1);
       border:3px solid rgba(216, 55, 50, 0.9);
 
-      width:20%;
+      width:90px;
       height:45px;
       font-size:20px;
 
       position: relative;
-      right: 0px;
+      right: -20px;
 
       /*bottom:-20px;*/
 
@@ -275,7 +290,6 @@
     }
 
     .quesReturn{
-      position: relative;
 
       width: 60px;
       height: 40px;
@@ -305,234 +319,13 @@
       cursor:pointer;
     }
 
-    @media screen and (max-width:1200px){
-      .question-bg{
-        width: 200px;
-      }
 
-      .question-serial {
-        height:60px;
-        font-size: 1.4em;
-      }
-
-      .question-des {
-        /*height:120px;*/
-        font-size: 0.6em;
-      }
-
-      .question-status {
-        width:100px;
-        height:45px;
-        font-size:1.2em;
-      }
-
-      .question-word{
-        font-size: 1.6em;
-      }
-
-      #question-title{
-        font-size: 1.8em;
-      }
-
-      .answer-board{
-        font-size: 35px;
-      }
-
-      #user-answer{
-        width: 60px;
-        height: 60px;
-        font-size: 35px;
-
-      }
-
-      .btn-submit{
-
-        width:130px;
-        height: 45px;
-
-        font-size:20px;
-      }
-
-      .quesReturn{
-
-        width: 60px;
-        height: 40px;
-
-        font-size: 19px;
-
-      }
-    }
-
-    @media screen and (max-width:992px){
-      .question-bg{
-        width: 170px;
-      }
-
-      .question-serial {
-        height:60px;
-        font-size: 1.3em;
-      }
-
-      .question-des {
-        /*height:150px;*/
-        font-size: 0.5em;
-      }
-
-      .question-status {
-        width:90px;
-        height:45px;
-        font-size:1em;
-      }
-
-      .question-word{
-        font-size: 1.4em;
-      }
-      #question-title{
-        font-size: 1.2em;
-      }
-      .answer-board{
-        font-size: 30px;
-      }
-
-      #user-answer{
-        width: 50px;
-        height: 50px;
-        font-size: 30px;
-
-      }
-
-      .btn-submit{
-
-        width:80px;
-        height: 40px;
-        font-size:18px;
-      }
-
-      .quesReturn{
-
-        width: 50px;
-        height: 36px;
-
-        font-size: 18px;
-
-      }
-
-      .answer-board{
-        left: 30%;
-      }
-    }
-
-    @media screen and (max-width:768px){
-      .question-bg{
-        width: 150px;
-      }
-
-      .question-serial {
-        height:60px;
-        font-size: 1.2em;
-      }
-
-      .question-des {
-        /*height:180px;*/
-        font-size: 0.25em;
-      }
-
-      .question-status {
-        width:80px;
-        height:45px;
-        font-size:0.8em;
-      }
-
-      .question-word{
-        font-size: 1.2em;
-      }
-      #question-title{
-        font-size: 0.8em;
-      }
-      .answer-board{
-        font-size: 20px;
-      }
-
-      #user-answer{
-        width: 45px;
-        height: 45px;
-        font-size: 20px;
-      }
-
-      .btn-submit{
-        width:70px;
-        height: 37px;
-        font-size:16px;
-      }
-
-      .quesReturn{
-        width: 45px;
-        height: 35px;
-        font-size: 15px;
-      }
-
-    }
-
-    @media screen and (max-width:480px){
-      .question-bg{
-        width: 130px;
-      }
-
-      .question-serial {
-        height:60px;
-        font-size: 1em;
-      }
-
-      .question-des {
-        /*height:200px;*/
-        font-size: 0.2em;
-      }
-
-      .question-status {
-        width:60px;
-        height:40px;
-        font-size:0.6em;
-      }
-
-      .question-word{
-        font-size: 1em;
-      }
-      #question-title{
-        font-size: 0.6em;
-      }
-      .answer-board{
-        font-size: 18px;
-      }
-
-      #user-answer{
-        width: 30px;
-        height: 30px;
-        font-size: 18px;
-      }
-
-      .btn-submit{
-        width:80px;
-        height: 35px;
-        font-size:15px;
-      }
-
-      .quesReturn{
-        width: 30px;
-        height: 26px;
-        font-size: 13px;
-      }
-
-    }
-
-    .btn-confirm{
-
+    .btn-confirm-false{
       color: #ffffff;
       background-color: rgba(174, 48, 53, 1);
       border:3px solid rgba(216, 55, 50, 0.9);
 
-      width:20%;
-      max-width: 150px;
-      min-width: 120px;
+      width:90px;
       height:45px;
 
       position: relative;
@@ -540,20 +333,42 @@
 
       /*bottom:-20px;*/
 
+      border-radius:10.7rem!important;
+      text-align: center;
+      font-size:20px;
+    }
+
+    .btn-confirm-true{
+      color: #ffffff;
+      background-color: rgba(23, 94, 49, 1);
+      border:3px solid rgba(33, 137, 59, 0.9);
+
+      width:90px;
+      height:45px;
+
+      position: relative;
+      right: 0px;
+
+      /*bottom:-20px;*/
 
       border-radius:10.7rem!important;
       text-align: center;
-      font-size:1.2em;
+      font-size:20px;
     }
 
-
+    .col-center-block {
+      float: none;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
 
   </style>
 </head>
 <body>
 
 <div class="return">
-      <a href="start.html"><span > < 返回</span></a>
+			<a href="start.html"><span > < 返回</span></a>
 </div>
 
 <div class="container board">
@@ -561,14 +376,16 @@
 </div>
 
 
-<div class="modal fade bd-example-modal-lg" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop=”static”>
-  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+<div class="modal fade bd-example-modal-lg " id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop=”static”>
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content modal-bg">
       <div class="modal-header modal-header-bg">
         <div class="quesReturn">
               <span >返回</span>
         </div>
-        <span id="question-title">題目</span>
+        <div id="question-title">
+          <span >題目</span>
+        </div>
       </div>
       <div class="question-body">
         <div class="modal-body">
@@ -592,8 +409,8 @@
   </div>
 </div>
 
-<div class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="notificationModalTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+<div class="modal fade justify-content-md-center" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="notificationModalTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered col-8 modal-size" role="document">
     <div class="modal-content">
       <div class="modal-body">
         <div id="result-content">
@@ -601,7 +418,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-confirm" data-dismiss="modal" id="confirm">确定</button>
+        <button type="button" class="btn btn-confirm-false" data-dismiss="modal" id="confirm">确定</button>
       </div>
     </div>
   </div>
@@ -633,19 +450,17 @@
   }
   else {
       alert('url err, show default content');
-      typeID = 'lidnPO';
-      subTypeID = 'zGqDtC';
-      missionID = 1;
+      // typeID = 'lidnPO';
+      // subTypeID = 'zGqDtC';
   }
 
-  console.log(typeID, subTypeID);
+  // console.log(typeID, subTypeID, missionID);
 
   var quesDict = data[typeID]["subTypes"][subTypeID]["mission"][missionID]["questions"];
 
-  /*This is for the cookies. */
+
+  /* This is for the cookies. */
   console.log("test 1", quesDict);
-
-
   for (let i in quesDict){
     console.log("i", i);
     if (Cookies.get(quesDict[i]["id"]) != null) {
@@ -654,17 +469,16 @@
     }
   }
 
-
-  var rowDiv = $('<div class="row sub-board" >');
+  var rowDiv = $('<div class="row sub-board justify-content-md-center" >');
   $(".board:first").append(rowDiv);
   for(let i in quesDict){
       // console.log(quesDict[i]);
-      if (i==5){
-          rowDiv = $('<div class="row sub-board" >');
-          $(".board").append(rowDiv);
-      }
+      // if (i==5){
+      //     rowDiv = $('<div class="row sub-board align-self-center" >');
+      //     $(".board").append(rowDiv);
+      // }
 
-      let questionBg = $('<div class="col-lg question-bg"></div>');
+      let questionBg = $('<div class="col-center-block question-bg"></div>');
       rowDiv.append(questionBg);
 
       let quesBoard = $('<div class="question-board"></div>');
@@ -744,12 +558,14 @@
     // $("#return").show();
 
     console.log(quesDict[curQuesIndex]);
+    
+    let user_answer = $('#user-answer').val().trim();
+
+    // console.log(user_answer, answerErrIndex);
+
     if (isAnswered == 0){
         return;
     }
-    let user_answer = $('#user-answer').val();
-
-    // console.log(user_answer, answerErrIndex);
 
     curQuestion["done"] = 1;
 
@@ -773,6 +589,7 @@
     }
 
     // console.log('用户回答：', curQuestion);
+
     // curQuesIndex indices the index of the question.
     if (curQuestion["result"] == 1) {
       Cookies.set(quesDict[curQuesIndex]["id"], 1);
@@ -794,14 +611,20 @@
     $("#submit").click(function() {
         isAnswered = 1;
 
-        let user_answer = $('#user-answer').val();
+        let user_answer = $('#user-answer').val().trim();
         curQuestion["answerWord"] = user_answer;
         curQuestion["answerErrIndex"] = answerErrIndex;
+
+        console.log(user_answer, answerErrIndex);
 
         if (curQuestion["answerWord"]== curQuestion["correct"] && curQuestion["answerErrIndex"]== curQuestion["errIndex"] ){
           //console.log("恭喜！你答對了！");
           var result = document.getElementById("result-content");
           result.innerHTML = "恭喜！你答對了！";
+          $("#confirm").removeClass("btn-confirm-false");
+          $("#confirm").addClass("btn-confirm-true");
+          //confirm.style["background-color"] = rgba(23, 94, 49, 1);
+          //confirm.attr("background-color") = rgba(23, 94, 49, 1);
           $('#notificationModal').modal('show');
           $('#exampleModal').modal('hide');
         }
@@ -809,6 +632,8 @@
           //console.log("你答錯了。請再嘗試。");
           var result = document.getElementById("result-content");
           result.innerHTML = "你答錯了。請再嘗試。";
+          $("#confirm").removeClass("btn-confirm-true");
+          $("#confirm").addClass("btn-confirm-false");
           $('#notificationModal').modal('show');
           /* empty all user input */
           $("#confirm").click(function() {
