--- a/index.html
+++ b/index.html
@@ -203,10 +203,12 @@
       <p>I am currently a third-year Ph.D. Candidate at The Chinese University of Hong Kong, very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. My research interests include LLM-based dialogue systems [EMNLP 2023], personalized open-domain dialogue systems [ACL 2023], and reinforcement learning [ICASSP 2022]. Feel free to reach out to me via email for any discussion or cooperation.
 
       <!-- and <a href="https://lia.epfl.ch/~mi/">Dr. Mi Fei</a> from Huawei Noah'ark Lab under the Joint-Ph.D program between CUHK and Huawei -->
-
-      <ul>
-        <li> I am seeking visiting or internship opportunities to conduct related to LLM, preferably in Europe or America. </li>
-      </ul>
+      
+      <div class="row">
+        <ul>
+          <li> I am seeking <strong> visiting or internship opportunities </strong> to conduct related to LLM, preferably in Europe or America. Please email me if you are interested in my research plan. </li>
+        </ul>
+      </div>
 
       <div class="row">
         <div class="col-md-5">
