--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           <ul class="ul-community fa-ul">
             <li>
             <i class="fa-li fas fa-light fa-book"></i>
-            Reviewer: IJCAI2023, EMNLP2023, AAAI2024, ARR (Oct-2023)</li>
+            Reviewer: IJCAI2023, EMNLP2023, AAAI2024, ARR (Oct,Dec-2023)</li>
           </ul>
         </div>
     </div>
@@ -346,6 +346,14 @@
           </div>
         </div>
       -->
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="tbd">M3Sum: A Novel Unsupervised Language-guided Video Summarization</a> 
+          <img src="https://img.shields.io/badge/MM-red"> 
+          <img src="https://img.shields.io/badge/LLM-orange"> <br>
+          <span class="author_list"><strong>Hongru WANG*</strong>, Baohang Zhou*, Zhengkun Zhang, Yiming Du, David Ho, Kam-Fai Wong </span><br>
+          <span><i>ICASSP 2024</i></span> using ChatGPT to edit video
+        </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
@@ -446,7 +454,7 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="https://arxiv.org/pdf/2309.16090.pdf">TPE: Towards Better Compositional Reasoning over Conceptual Tools with Multi-persona Collaboration (2023) </a> 
           <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
-          <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Lingzhi Wang, Minda Hu, Rui Wang, Boyang XUE, Hongyuan Lu, Fei Mi, Kam-Fai Wong:</span> <br>
+          <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Lingzhi Wang, Minda Hu, Rui Wang, Boyang XUE, Hongyuan Lu, Fei Mi, Kam-Fai Wong </span> <br>
           <span> Under Review </span> <strong style="color:red"> (Most favorite motivation) </strong> 
           
           <!-- <p>
