--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
 
       <!-- and <a href="https://lia.epfl.ch/~mi/">Dr. Mi Fei</a> from Huawei Noah'ark Lab under the Joint-Ph.D program between CUHK and Huawei -->
       
-      <div class="row" style="margin-top:20px;">
+      <!-- <div class="row" style="margin-top:20px;">
         <ul>
           <li> I am seeking <strong> visiting or internship opportunities </strong> to conduct research related to LLM, preferably in Europe or America. Please email me if you are interested in my research plan. </li>
         </ul>
-      </div>
+      </div> -->
 
       <div class="row">
         <div class="col-md-5">
@@ -270,7 +270,7 @@
           <ul class="ul-community fa-ul">
             <li>
             <i class="fa-li fas fa-light fa-book"></i>
-            Reviewer: IJCAI2023, EMNLP2023, AAAI2024, ARR (Oct,Dec-2023)</li>
+            Reviewer: IJCAI2023, EMNLP2023, AAAI2024, ARR (Oct,Dec-2023, Feb-2024)</li>
           </ul>
         </div>
     </div>
