--- a/publication/index.html
+++ b/publication/index.html
@@ -137,6 +137,15 @@
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="https://www.sciencedirect.com/science/article/pii/S0885230824000202">KddRES: A Multi-level Knowledge-driven Dialogue Dataset for Restaurant Towards Customized Dialogue System</a>
+                      <img src="https://img.shields.io/badge/TOD-teal"> <br>
+                      <span class="author_list"><strong>Hongru WANG</strong>, Wai-Chung Kwan, Min Li, Zimo Zhou, Kam-Fai Wong</span> <br>
+                      <span><i>Computer Speech and Language (SCI Q2, IF: 4.3)</i></span>
+                    </div>
+
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods for Task-Oriented Dialogue Policy Learning</a>
                       <img src="https://img.shields.io/badge/TOD_DPL-teal"> <br>
                       <span class="author_list">Wai-Chung Kwan*, <strong>Hongru WANG*</strong>, Huimin Wang, Kam-Fai Wong</span> <br>
@@ -160,6 +169,33 @@
         <div class="universal-wrapper">
             <div class="row">
                 <div class="col-lg-12">
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="https://arxiv.org/abs/2305.13733.pdf">Enhancing Large Language Models Against Inductive Instructions with Dual-critique Prompting</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/Safety-red"> <br>
+                      <span class="author_list">Rui Wang*, <strong>Hongru WANG</strong>*, Fei Mi, Yi Chen, Boyang Xue, Kam-Fai Wong, Ruifeng Xu </span><br>
+                      <span><i>NAACL 2024</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="https://arxiv.org/abs/2403.02756.pdf">Role Prompting Guided Domain Adaptation with General Capability Preserve for Large Language Models</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/Safety-red"> <br>
+                      <span class="author_list">Rui Wang, Fei Mi, Yi Chen, Boyang XUE, <strong>Hongru Wang</strong>, Qi Zhu, Kam-Fai Wong, Ruifeng Xu </span><br>
+                      <span><i>NAACL 2024</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="https://arxiv.org/abs/2310.15851.pdf">SELF-GUARD: Empower the LLM to Safeguard Itself</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/Safety-red"> <br>
+                      <span class="author_list">Zezhong Wang, Fangkai Yang, Lu Wang, Pu Zhao, <strong>Hongru Wang</strong>, Liang Chen, Qingwei Lin, Kam- Fai Wong</span><br>
+                      <span><i>NAACL 2024</i></span>
+                    </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
