--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <div class="col-12 col-lg-8">
 
       
-      <h1>About Me <a href="/cv/cv_eng.pdf" style="font-size: 20px;">[CV]</a></h1>
+      <h1>About Me <a href="/cv/hongru_cv.pdf" style="font-size: 20px;">[CV]</a></h1>
 
       <p>I am currently a third-year Ph.D. Candidate, very honored and fortunated to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. My research interests include Dialogue Systems [ACL 2023][EMNLP 2023], and Reinforcement Learning from AI Feedback (RLAIF) [ICASSP 2022], Large Language Models [EMNLP 2023][NAACL 2024] and Safety of LLMs [NAACL 2024]. Feel free to reach out to me via email for any discussion or cooperation.
 
