--- a/services/tools-meet-llm/index.html
+++ b/services/tools-meet-llm/index.html
@@ -56,8 +56,8 @@
               <tr>
                   <!-- <th scope="row">TR-7</th> -->
                   <td width="20%" style="text-align: center; padding: 3px"><img width="150px" height="120px" src="static/imgs/profile_hongru.png"></td>
-                  <td width="20%" style="text-align: center; padding: 3px"><img width="150px" height="120px" src="static/imgs/profile_hongru.png"></td>
-                  <td width="20%" style="text-align: center; padding: 3px"><img width="150px" height="120px" src="static/imgs/profile_hongru.png"></td>
+                  <td width="20%" style="text-align: center; padding: 3px"><img width="150px" height="120px" src="static/imgs/profile_yujia.jpg"></td>
+                  <td width="20%" style="text-align: center; padding: 3px"><img width="150px" height="120px" src="static/imgs/profile_yankai.png"></td>
                   <td width="20%" style="text-align: center; padding: 3px"><img width="150px" height="120px" src="static/imgs/profile_hongru.png"></td>
                    <td width="20%" style="text-align: center; padding: 3px"><img width="150px" height="120px" src="static/imgs/profile_kfwong.png"></td>
               </tr>
