--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
       <div class="col-12 col-lg-8">
       
-      <h1>About Me <a href="/cv/hongru_cv.pdf" style="font-size: 20px;">[CV]</a></h1>
+      <h1>About Me <a href="/cv/cv_eng.pdf" style="font-size: 20px;">[CV]</a></h1>
 
       
       <p>I am currently a third-year Ph.D. Candidate at The Chinese University of Hong Kong, very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. I am happy to visit The University of Edinburgh, working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a>. Besides that, I am co-founder and organizer of <a href="https://mp.weixin.qq.com/s/_lisgXd2MOaFhl3cz-8znA">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
@@ -288,7 +288,7 @@
       <div class="col-12 col-lg-9">
 
         <ul>
-          <li>May 2024: Two papers are accepted by <em>ACL 2024</em>, But non-first authors. Sad stroy. </li>
+          <li>May 2024: Two papers are accepted by <em>ACL 2024</em>, But non-first authors. Sad story, should work harder. </li>
 
           <li>May 2024: We won the champion of <a href="https://ospc.aisingapore.org/">Online Safety Prize Challenge organized by AI singapore</a> <img src="images/trophy.png" width="15" height="15"> </li>
 
