--- a/publication/index.html
+++ b/publication/index.html
@@ -171,7 +171,7 @@
                       <a href="">Medical Dialogue: A Survey of Categories, Methods, Evaluation and Challenges</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
                       <span class="author_list">Xiaoming Shi, Zeming Liu, Li Du, Yuxuan Wang,<strong>Hongru WANG</strong>, Yuhang Guo, Tong Ruan, JIE XU, Shaoting Zhang</span><br>
-                      <span><i>Findings of ACL 2024</i></span>
+                      <span><i>Findings, ACL 2024</i></span>
                     </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -180,7 +180,7 @@
                       <img src="https://img.shields.io/badge/LLM-orange">
                       <img src="https://img.shields.io/badge/Safety-red"> <br>
                       <span class="author_list">Baohang Zhou, Zezhong WANG, Lingzhi Wang, <strong>Hongru WANG</strong>, Ying Zhang, Kehui Song, Xuhui Sui, Kam-Fai Wong </span><br>
-                      <span><i>Findings of ACL 2024</i></span>
+                      <span><i>Findings, ACL 2024</i></span>
                     </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
